<resources>
    <string name="app_name">GraphQl Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_id">Id: %s</string>
    <string name="text_name">Name: %s</string>
    <string name="text_specie">Specie: %s</string>
    <string name="text_status">Status:</string>
    <string name="text_gender">Gender: </string>
    <string name="text_origin">Origin: </string>
    <string name="text_origin_name">Name: %s</string>
    <string name="text_origin_type">Type: %s</string>
    <string name="text_origin_dimension">Dimension: %s</string>
    <string name="text_title_episode">Episodes</string>
    <string name="text_id_episode">Id: %s</string>

    <string name="hint_name_character">Nombre de personaje</string>
    <string name="hint_name_episode">Episode</string>
</resources>