<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailsFragment">


    <ImageView
        android:id="@+id/ivCharacter"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:cardCornerRadius="@dimen/corner_16"
        app:cardElevation="@dimen/elevation_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCharacter">

        <TextView
            android:id="@+id/tvNameCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_name_character"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_24"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCharacter" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_40"
            android:alpha="0.8"
            android:background="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameCharacter">

            <TextView
                android:id="@+id/tvTitleStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/text_status"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTitleStatus"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitleGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_gender"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleStatus" />

            <TextView
                android:id="@+id/tvTitleOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_origin"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleGender" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

            <TextView
                android:id="@+id/tvOriginName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_origin_name"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTitleOrigin"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <TextView
                android:id="@+id/tvOriginType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_origin_type"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvOriginName"
                app:layout_constraintTop_toBottomOf="@+id/tvOriginName" />

            <TextView
                android:id="@+id/tvOriginDimension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/text_origin_dimension"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvOriginType"
                app:layout_constraintTop_toBottomOf="@+id/tvOriginType" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvtitleEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_episode"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEpisodes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitleEpisodes" />

</androidx.constraintlayout.widget.ConstraintLayout>